tdf#155708 Fix validity dialog closes when moving focus to another window

Do not close Validation window if click on another Calc sheet.

Change-Id: I75569cbb91ebd445ac57f7a52d914297c21349e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153930
Tested-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit a5c61b143d53bb10430b8a486874856c16a2d86c)
and
(cherry picked from commit efaa065eb7053954242c83760f897e7dba2e9fe8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154033
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins