include/vcl/toolkit/dialog.hxx
@@ -58,6 +58,8 @@ private:
     bool            mbModalMode;
     InitFlag        mnInitFlag; // used for deferred init
 
+    const int nCloseResponseToJustHide = -42;
+
     VclPtr<VclButtonBox> mpActionArea;
     VclPtr<VclBox>       mpContentArea;
 
